# chronodesk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP_FIXES.md  ROADMAP_update_fixes.md  SECURITY.md  installer.iss  old_deps.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker.yml  release.yml  rust.yml
chronodesk_app/: pubspec.yaml
chronodesk_app/lib/: main.dart
chronodesk_flutter/: .gitignore  README.md  pubspec.yaml
chronodesk_flutter/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
chronodesk_flutter/ios/Flutter/ephemeral/: flutter_native_integration.env
chronodesk_flutter/lib/: main.dart
chronodesk_flutter/lib/src/: app.dart  update_checker.dart
chronodesk_flutter/lib/src/ffi/: native.dart
chronodesk_flutter/lib/src/screens/: home_screen.dart  host_screen.dart  viewer_screen.dart
chronodesk_flutter/test/: widget_test.dart
chronodesk_flutter/windows/: CMakeLists.txt
chronodesk_flutter/windows/runner/: Runner.rc  main.cpp
server/: deploy-turn.sh  install-signaling.sh
server/turn/: docker-compose.yml  turnserver.conf
src/: app.rs  audio.rs  capture.rs  clipboard.rs  crypto.rs  ffi.rs  file_transfer.rs  input.rs  lib.rs  logger.rs  main.rs  protocol.rs  video.rs
src/network/: mod.rs  signaling.rs  transport.rs
ssh server key oracl/: ssh-key-2026-06-27.key  ssh-key-2026-06-27.key.pub
