[package]
name = "chronodesk"
version = "0.1.0"
edition = "2021"
description = "Open-source remote desktop software - AnyDesk alternative"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
bytes = "1"

# WebRTC transport
# webrtc = "0.17"   # uncomment when ready to implement
# ffmpeg-next = "8" # uncomment when ready to implement
ring = "0.17"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
