[package]
name = "chronodesk"
version = "0.2.9"
edition = "2021"
description = "Open-source remote desktop software - AnyDesk alternative"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
bytes = "1"

webrtc = "0.17"
ffmpeg-next = { version = "8", optional = true }
ring = "0.17"
xcap = "0.9"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tokio-tungstenite = "0.24"
enigo = "0.2"
bincode = "1"
libc = "0.2"

[features]
default = []
ffmpeg = ["ffmpeg-next"]

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "chronodesk-bin"
path = "src/main.rs"

[[bin]]
name = "signaling-server"
path = "src/bin/signaling.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
